End of Semester Update

--- a/Comp Chem Package Example.ipynb
+++ b/Comp Chem Package Example.ipynb
@@ -10,9 +10,9 @@
     "#Allow Notebook to Import from Comp_Chem_Package\n",
     "import sys\n",
     "if(\"win\" in sys.platform):\n",
-    "    sys.path.append(\".\\\\Comp_Chem_Package\")\n",
+    "    sys.path.append(\".\\\\Backend\")\n",
     "else: \n",
-    "    sys.path.append(\"./Comp_Chem_Package\")\n",
+    "    sys.path.append(\"./Backend\")\n",
     "\n",
     "from compChemGlobal import *"
    ]
@@ -98,15 +98,13 @@
       "basisFunction.value(r):  1.1115426321334092\n",
       "\n",
       "basisFunction.squaredValue(r):  1.2355270230500675\n",
-      "\n",
-      "graph objects called\n",
-      "2\n"
+      "\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7a1994d4d5594f2aa1120f64964f7102",
+       "model_id": "1d262007a1a44f14a8467eaa19286bc4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -118,6 +116,16 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<how.how at 0x217a847f220>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -159,15 +167,13 @@
       "Basis Function n=2 .value(r):  1.3079968679038638\n",
       "Basis Function n=3 .value(r):  1.6650450097944065\n",
       "\n",
-      "First Basis Function:\n",
-      "graph objects called\n",
-      "2\n"
+      "First Basis Function:\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9b844958c7144943bdaf3b81791e5503",
+       "model_id": "7972172c7849409b97937826dade4211",
        "version_major": 2,
        "version_minor": 0
       },
@@ -184,15 +190,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Basis Size:  4\n",
-      "graph objects called\n",
-      "8\n"
+      "Basis Size:  4\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "18e19068a88b4f0d8b797e8beddee2df",
+       "model_id": "fc99220d2beb46049932dd86e3be3a12",
        "version_major": 2,
        "version_minor": 0
       },
@@ -208,7 +212,7 @@
     {
      "data": {
       "text/plain": [
-       "<basisSet.basisSet at 0x212eac0c0a0>"
+       "<basisSet.basisSet at 0x217ac77bd60>"
       ]
      },
      "execution_count": 4,
@@ -273,7 +277,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "da606cc072a44814abb5fb3331bf6c99",
+       "model_id": "76fdf04200924050b9a89eb77a1c8596",
        "version_major": 2,
        "version_minor": 0
       },
@@ -294,7 +298,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5bc8fccd2dd746be86f9fa58dc2dc67b",
+       "model_id": "2f4f53579f72484c9ee43ca7abb78807",
        "version_major": 2,
        "version_minor": 0
       },
@@ -334,27 +338,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fb4deef8b19e4225bd471e175adac5d3",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(FigureWidget({\n",
-       "    'data': [{'fill': 'none',\n",
-       "              'hoverlabel': {'font': {'size': 16}}…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
    "source": [
     "from molecule import *\n",
     "from hartreeFock import hartreeFock\n",
@@ -372,43 +357,28 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-1.1167592920796137"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "hf.implementation(.74) * 0.0000046"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "fitting.value(r):  38786.17426489218\n",
-      "graph objects called\n",
-      "2\n"
+      "fitting.value(r):  38786.17426489218\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bc9ebf3a522b40f0a241c479fbb814f6",
+       "model_id": "7b9498a23cfe4b9baecf525945d42f0e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -424,10 +394,10 @@
     {
      "data": {
       "text/plain": [
-       "<morsePotential.morsePotential at 0x212eabec970>"
+       "<morsePotential.morsePotential at 0x217ac758d60>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,16 +426,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "T[1,1]:  3293.90059\n",
-      "V[0,1]:  -692.5480107266716\n",
-      "H[1,1]: -2058.232222008167\n"
+      "T[1,1]:  3300.9075000000003\n",
+      "V[0,1]:  -692.5480107266711\n",
+      "H[1,1]: -2058.2322220081846\n"
      ]
     }
    ],
@@ -508,21 +478,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "graph objects called\n",
-      "8\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0a8dd38bfa3648c68785340055714506",
+       "model_id": "bff85922ca2f4d8cb8616dd6f6ae1731",
        "version_major": 2,
        "version_minor": 0
       },
@@ -536,25 +498,9 @@
      "output_type": "display_data"
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "YESSS!! Squared Wavefunction n=3\n",
-      "YESSS!! Wavefunction n=3\n",
-      "YESSS!! Squared Wavefunction n=2\n",
-      "YESSS!! Wavefunction n=2\n",
-      "YESSS!! Squared Wavefunction n=1\n",
-      "YESSS!! Wavefunction n=1\n",
-      "YESSS!! Squared Wavefunction n=0\n",
-      "YESSS!! Wavefunction n=0\n",
-      "graph objects called\n",
-      "9\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0ad97a0449f94e9e95f34b71e27c3ea3",
+       "model_id": "fe92468f1882497098990ebaa43dccb2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -571,16 +517,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "wavefunction.value(r):  2180.3575582510957\n",
-      "\n",
-      "graph objects called\n",
-      "1\n"
+      "wavefunction.value(r):  2181.6703632444355\n",
+      "\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e83617d26430436980d552d8c4475a32",
+       "model_id": "8ce495ea452a4c7da8068ae727c66460",
        "version_major": 2,
        "version_minor": 0
       },
@@ -596,10 +540,10 @@
     {
      "data": {
       "text/plain": [
-       "<wavefunction.wavefunction at 0x212ed4b2880>"
+       "<wavefunction.wavefunction at 0x217ac766250>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -647,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +600,7 @@
        "10244.7125"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -667,16 +611,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "10786.610896374097"
+       "10811.379901126444"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -687,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +640,7 @@
        "6328.8225"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -707,16 +651,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "6435.11933325726"
+       "6442.924684814261"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -727,18 +671,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'hartreeFock' object has no attribute 'initialIntegrals'",
+     "ename": "NameError",
+     "evalue": "name 'hartreeFock' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-15-30ceff934b09>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mH\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbasis\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mhartreeFock\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msystem\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minitialIntegrals\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m: 'hartreeFock' object has no attribute 'initialIntegrals'"
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-13-30ceff934b09>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mH\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbasis\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mhartreeFock\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msystem\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minitialIntegrals\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'hartreeFock' is not defined"
      ]
     }
    ],
@@ -753,6 +697,60 @@
    "outputs": [],
    "source": [
     "basis[0].contractedGaussians"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pesMethod.E(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rkrTest = rkr(dc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rkrTest.E(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sol.eigenValues"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "solution.eigenValues"
    ]
   },
   {
