--- a/Learning/Diatomic Workspace.ipynb
+++ b/Learning/Diatomic Workspace.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "##Allow Notebook to Import from Comp_Chem_Package\n",
     "import sys\n",
     "if(\"win\" in sys.platform):\n",
-    "    sys.path.append(\".\\\\Comp_Chem_Package\")\n",
+    "    sys.path.append(\"..\\\\Backend\")\n",
     "else: \n",
-    "    sys.path.append(\"./Comp_Chem_Package\")"
+    "    sys.path.append(\"../Backend\")"
    ]
   },
   {
@@ -29,7 +29,7 @@
    "outputs": [],
    "source": [
     "#Import all required classes here\n",
-    "from nistScraper import getDiatomicConstants\n",
+    "from nistScraper import *\n",
     "from how import *\n",
     "from basisSet import *\n",
     "from rkr import *\n",
@@ -96,7 +96,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "60ef06e1da4f41faa9e443fde364d9c2",
+       "model_id": "58786b876dd14df6b9261c71eef71ae3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -110,7 +110,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "deadbf5c3e984b3fa65097b14cb56ab3",
+       "model_id": "ccf07e79c7bf46158932fef5728e8330",
        "version_major": 2,
        "version_minor": 0
       },
@@ -200,7 +200,19 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '.\\\\dataStorage\\\\NODEFDEF'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-5-24757988c1f7>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstoragePath\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m\"NODEFDEF\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'rb'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mschrodBin\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m            \u001b[0mschrodSolution\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdill\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mschrodBin\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mtimeit\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '.\\\\dataStorage\\\\NODEFDEF'"
+     ]
+    }
+   ],
    "source": [
     " with open(storagePath + \"NODEFDEF\", 'rb') as schrodBin:\n",
     "            schrodSolution = dill.load(schrodBin)  \n",
@@ -209,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +258,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
