Fixes Schrodinger.py error
Schrodinger solution code that handles superimposing multiple solutions together had bug where graphing a schrod solution without a PES would raise an exception. The code was modified to handle the no PES situation.

--- a/Comp Chem Package Example.ipynb
+++ b/Comp Chem Package Example.ipynb
@@ -104,7 +104,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1d262007a1a44f14a8467eaa19286bc4",
+       "model_id": "0ecc9f6687f247ed88e9d4f21c024953",
        "version_major": 2,
        "version_minor": 0
       },
@@ -120,7 +120,7 @@
     {
      "data": {
       "text/plain": [
-       "<how.how at 0x217a847f220>"
+       "<how.how at 0x2147e05d970>"
       ]
      },
      "execution_count": 3,
@@ -173,7 +173,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7972172c7849409b97937826dade4211",
+       "model_id": "5f8a1076627a42978affe6dd4132dade",
        "version_major": 2,
        "version_minor": 0
       },
@@ -196,7 +196,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fc99220d2beb46049932dd86e3be3a12",
+       "model_id": "b7c0ff41d6c640c4ad96a3a00a15db2a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -212,7 +212,7 @@
     {
      "data": {
       "text/plain": [
-       "<basisSet.basisSet at 0x217ac77bd60>"
+       "<basisSet.basisSet at 0x2141d19b100>"
       ]
      },
      "execution_count": 4,
@@ -277,7 +277,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "76fdf04200924050b9a89eb77a1c8596",
+       "model_id": "b67dacb4224543ba9c61ca319509fc9a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -298,7 +298,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2f4f53579f72484c9ee43ca7abb78807",
+       "model_id": "a84c6343438845d8a1f963df1caab4fb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -378,7 +378,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7b9498a23cfe4b9baecf525945d42f0e",
+       "model_id": "1b480f09142f45c3aef45bf9714a0ccc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -394,7 +394,7 @@
     {
      "data": {
       "text/plain": [
-       "<morsePotential.morsePotential at 0x217ac758d60>"
+       "<morsePotential.morsePotential at 0x2141e9c65e0>"
       ]
      },
      "execution_count": 6,
@@ -434,8 +434,8 @@
      "output_type": "stream",
      "text": [
       "T[1,1]:  3300.9075000000003\n",
-      "V[0,1]:  -692.5480107266711\n",
-      "H[1,1]: -2058.2322220081846\n"
+      "V[0,1]:  -692.5480107266716\n",
+      "H[1,1]: -2058.232222008167\n"
      ]
     }
    ],
@@ -484,7 +484,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bff85922ca2f4d8cb8616dd6f6ae1731",
+       "model_id": "a00b3e510299409a818a1629dc9222ec",
        "version_major": 2,
        "version_minor": 0
       },
@@ -500,7 +500,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fe92468f1882497098990ebaa43dccb2",
+       "model_id": "f564817ea1454f00ba8bff5ebc6a2fd1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -524,7 +524,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8ce495ea452a4c7da8068ae727c66460",
+       "model_id": "72ab4fb09ba24bc0966299bdc60af2fe",
        "version_major": 2,
        "version_minor": 0
       },
@@ -540,7 +540,7 @@
     {
      "data": {
       "text/plain": [
-       "<wavefunction.wavefunction at 0x217ac766250>"
+       "<wavefunction.wavefunction at 0x2141e9e0850>"
       ]
      },
      "execution_count": 8,
@@ -617,7 +617,7 @@
     {
      "data": {
       "text/plain": [
-       "10811.379901126444"
+       "10811.379901126427"
       ]
      },
      "execution_count": 10,
@@ -657,7 +657,7 @@
     {
      "data": {
       "text/plain": [
-       "6442.924684814261"
+       "6442.924684814287"
       ]
      },
      "execution_count": 12,
@@ -777,7 +777,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
