--- a/Backend/Testing/speedTest.ipynb
+++ b/Backend/Testing/speedTest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "f325316e-9dc2-4e1b-b037-6f43a25f9245",
    "metadata": {},
    "outputs": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "ce2cfcc0-9179-4cd6-aede-1ff055c98b06",
    "metadata": {},
    "outputs": [],
@@ -60,14 +60,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "6217b577-880c-4261-8e95-bf3c9a5e49a8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d613073ba11643efa7802a578ba7ce95",
+       "model_id": "76bddebd638e42d6a1b06697d3b6e2f0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -83,7 +83,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b9f765c6ff8b49789c6912b6a3ee7f34",
+       "model_id": "79aa91281f6343beadabc9d9ae917dc1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -97,7 +97,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2e17e8e3bcb2482fa889d6f582a11d53",
+       "model_id": "9ca2c7ba8b564d309c8817cc9fc3789b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -113,7 +113,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "905935c2438349b2bfa9dbcaae2b6f82",
+       "model_id": "c4ae1b6d8a68498e9f00d98d6d74a7e7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -125,11 +125,130 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "singleprocessing\n",
+      "0  0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "A:\\School\\Chapman\\Research\\QM\\CatLab_CompChem\\Backend\\Testing\\..\\compChemGlobal.py:16: IntegrationWarning:\n",
+      "\n",
+      "The occurrence of roundoff error is detected, which prevents \n",
+      "  the requested tolerance from being achieved.  The error may be \n",
+      "  underestimated.\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0  1\n",
+      "0  2\n",
+      "0  3\n",
+      "0  4\n",
+      "0  5\n",
+      "0  6\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "A:\\School\\Chapman\\Research\\QM\\CatLab_CompChem\\Backend\\Testing\\..\\compChemGlobal.py:16: IntegrationWarning:\n",
+      "\n",
+      "The integral is probably divergent, or slowly convergent.\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0  7\n",
+      "0  8\n",
+      "0  9\n",
+      "0  10\n",
+      "0  11\n",
+      "1  1\n",
+      "1  2\n",
+      "1  3\n",
+      "1  4\n",
+      "1  5\n",
+      "1  6\n",
+      "1  7\n",
+      "1  8\n",
+      "1  9\n",
+      "1  10\n",
+      "1  11\n",
+      "2  2\n",
+      "2  3\n",
+      "2  4\n",
+      "2  5\n",
+      "2  6\n",
+      "2  7\n",
+      "2  8\n",
+      "2  9\n",
+      "2  10\n",
+      "2  11\n",
+      "3  3\n",
+      "3  4\n",
+      "3  5\n",
+      "3  6\n",
+      "3  7\n",
+      "3  8\n",
+      "3  9\n",
+      "3  10\n",
+      "3  11\n",
+      "4  4\n",
+      "4  5\n",
+      "4  6\n",
+      "4  7\n",
+      "4  8\n",
+      "4  9\n",
+      "4  10\n",
+      "4  11\n",
+      "5  5\n",
+      "5  6\n",
+      "5  7\n",
+      "5  8\n",
+      "5  9\n",
+      "5  10\n",
+      "5  11\n",
+      "6  6\n",
+      "6  7\n",
+      "6  8\n",
+      "6  9\n",
+      "6  10\n",
+      "6  11\n",
+      "7  7\n",
+      "7  8\n",
+      "7  9\n",
+      "7  10\n",
+      "7  11\n",
+      "8  8\n",
+      "8  9\n",
+      "8  10\n",
+      "8  11\n",
+      "9  9\n",
+      "9  10\n",
+      "9  11\n",
+      "10  10\n",
+      "10  11\n",
+      "11  11\n"
+     ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "736feb96c61b401cbcf383e40a4d61c0",
+       "model_id": "b02c42f3799b495299891dfeeb04a056",
        "version_major": 2,
        "version_minor": 0
       },
@@ -145,10 +264,10 @@
     {
      "data": {
       "text/plain": [
-       "13.796879999999987"
+       "26.6885772"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
