Adds cython as a project dependency

--- a/compChemDependencies.ipynb
+++ b/compChemDependencies.ipynb
@@ -101,7 +101,8 @@
     "!{sys.executable} -m pip install ipywidgets\n",
     "!{sys.executable} -m pip install bs4\n",
     "!{sys.executable} -m pip install lxml\n",
-    "!{sys.executable} -m pip install multiprocess"
+    "!{sys.executable} -m pip install multiprocess\n",
+    "!{sys.executable} -m pip install cython"
    ]
   },
   {
