--- a/compChemDependencies.ipynb
+++ b/compChemDependencies.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -23,28 +23,28 @@
      "text": [
       "Requirement already satisfied: numpy in a:\\apps\\python\\lib\\site-packages (1.20.3)\n",
       "Requirement already satisfied: plotly in a:\\apps\\python\\lib\\site-packages (4.14.3)\n",
-      "Requirement already satisfied: retrying>=1.3.3 in a:\\apps\\python\\lib\\site-packages (from plotly) (1.3.3)\n",
       "Requirement already satisfied: six in a:\\apps\\python\\lib\\site-packages (from plotly) (1.16.0)\n",
+      "Requirement already satisfied: retrying>=1.3.3 in a:\\apps\\python\\lib\\site-packages (from plotly) (1.3.3)\n",
       "Requirement already satisfied: scipy in a:\\apps\\python\\lib\\site-packages (1.6.3)\n",
       "Requirement already satisfied: numpy<1.23.0,>=1.16.5 in a:\\apps\\python\\lib\\site-packages (from scipy) (1.20.3)\n",
       "Requirement already satisfied: ipywidgets in a:\\apps\\python\\lib\\site-packages (7.6.3)\n",
-      "Requirement already satisfied: jupyterlab-widgets>=1.0.0 in a:\\apps\\python\\lib\\site-packages (from ipywidgets) (1.0.0)\n",
-      "Requirement already satisfied: ipython>=4.0.0 in a:\\apps\\python\\lib\\site-packages (from ipywidgets) (7.24.1)\n",
       "Requirement already satisfied: nbformat>=4.2.0 in a:\\apps\\python\\lib\\site-packages (from ipywidgets) (5.1.3)\n",
-      "Requirement already satisfied: ipykernel>=4.5.1 in a:\\apps\\python\\lib\\site-packages (from ipywidgets) (5.5.5)\n",
+      "Requirement already satisfied: ipython>=4.0.0 in a:\\apps\\python\\lib\\site-packages (from ipywidgets) (7.24.1)\n",
       "Requirement already satisfied: widgetsnbextension~=3.5.0 in a:\\apps\\python\\lib\\site-packages (from ipywidgets) (3.5.1)\n",
+      "Requirement already satisfied: ipykernel>=4.5.1 in a:\\apps\\python\\lib\\site-packages (from ipywidgets) (5.5.5)\n",
       "Requirement already satisfied: traitlets>=4.3.1 in a:\\apps\\python\\lib\\site-packages (from ipywidgets) (5.0.5)\n",
+      "Requirement already satisfied: jupyterlab-widgets>=1.0.0 in a:\\apps\\python\\lib\\site-packages (from ipywidgets) (1.0.0)\n",
       "Requirement already satisfied: tornado>=4.2 in a:\\apps\\python\\lib\\site-packages (from ipykernel>=4.5.1->ipywidgets) (6.1)\n",
       "Requirement already satisfied: jupyter-client in a:\\apps\\python\\lib\\site-packages (from ipykernel>=4.5.1->ipywidgets) (6.1.12)\n",
-      "Requirement already satisfied: matplotlib-inline in a:\\apps\\python\\lib\\site-packages (from ipython>=4.0.0->ipywidgets) (0.1.2)\n",
-      "Requirement already satisfied: backcall in a:\\apps\\python\\lib\\site-packages (from ipython>=4.0.0->ipywidgets) (0.2.0)\n",
-      "Requirement already satisfied: setuptools>=18.5 in a:\\apps\\python\\lib\\site-packages (from ipython>=4.0.0->ipywidgets) (56.0.0)\n",
-      "Requirement already satisfied: colorama in a:\\apps\\python\\lib\\site-packages (from ipython>=4.0.0->ipywidgets) (0.4.4)\n",
-      "Requirement already satisfied: decorator in a:\\apps\\python\\lib\\site-packages (from ipython>=4.0.0->ipywidgets) (5.0.9)\n",
-      "Requirement already satisfied: prompt-toolkit!=3.0.0,!=3.0.1,<3.1.0,>=2.0.0 in a:\\apps\\python\\lib\\site-packages (from ipython>=4.0.0->ipywidgets) (3.0.18)\n",
       "Requirement already satisfied: jedi>=0.16 in a:\\apps\\python\\lib\\site-packages (from ipython>=4.0.0->ipywidgets) (0.18.0)\n",
       "Requirement already satisfied: pygments in a:\\apps\\python\\lib\\site-packages (from ipython>=4.0.0->ipywidgets) (2.9.0)\n",
+      "Requirement already satisfied: backcall in a:\\apps\\python\\lib\\site-packages (from ipython>=4.0.0->ipywidgets) (0.2.0)\n",
+      "Requirement already satisfied: matplotlib-inline in a:\\apps\\python\\lib\\site-packages (from ipython>=4.0.0->ipywidgets) (0.1.2)\n",
+      "Requirement already satisfied: colorama in a:\\apps\\python\\lib\\site-packages (from ipython>=4.0.0->ipywidgets) (0.4.4)\n",
+      "Requirement already satisfied: prompt-toolkit!=3.0.0,!=3.0.1,<3.1.0,>=2.0.0 in a:\\apps\\python\\lib\\site-packages (from ipython>=4.0.0->ipywidgets) (3.0.18)\n",
+      "Requirement already satisfied: setuptools>=18.5 in a:\\apps\\python\\lib\\site-packages (from ipython>=4.0.0->ipywidgets) (56.0.0)\n",
       "Requirement already satisfied: pickleshare in a:\\apps\\python\\lib\\site-packages (from ipython>=4.0.0->ipywidgets) (0.7.5)\n",
+      "Requirement already satisfied: decorator in a:\\apps\\python\\lib\\site-packages (from ipython>=4.0.0->ipywidgets) (5.0.9)\n",
       "Requirement already satisfied: parso<0.9.0,>=0.8.0 in a:\\apps\\python\\lib\\site-packages (from jedi>=0.16->ipython>=4.0.0->ipywidgets) (0.8.2)\n",
       "Requirement already satisfied: jsonschema!=2.5.0,>=2.4 in a:\\apps\\python\\lib\\site-packages (from nbformat>=4.2.0->ipywidgets) (3.2.0)\n",
       "Requirement already satisfied: jupyter-core in a:\\apps\\python\\lib\\site-packages (from nbformat>=4.2.0->ipywidgets) (4.7.1)\n",
@@ -56,40 +56,49 @@
       "Requirement already satisfied: notebook>=4.4.1 in a:\\apps\\python\\lib\\site-packages (from widgetsnbextension~=3.5.0->ipywidgets) (6.4.0)\n",
       "Requirement already satisfied: jinja2 in a:\\apps\\python\\lib\\site-packages (from notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets) (3.0.1)\n",
       "Requirement already satisfied: Send2Trash>=1.5.0 in a:\\apps\\python\\lib\\site-packages (from notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets) (1.5.0)\n",
+      "Requirement already satisfied: argon2-cffi in a:\\apps\\python\\lib\\site-packages (from notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets) (20.1.0)\n",
+      "Requirement already satisfied: nbconvert in a:\\apps\\python\\lib\\site-packages (from notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets) (6.0.7)\n",
       "Requirement already satisfied: terminado>=0.8.3 in a:\\apps\\python\\lib\\site-packages (from notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets) (0.10.0)\n",
       "Requirement already satisfied: pyzmq>=17 in a:\\apps\\python\\lib\\site-packages (from notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets) (22.1.0)\n",
-      "Requirement already satisfied: argon2-cffi in a:\\apps\\python\\lib\\site-packages (from notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets) (20.1.0)\n",
       "Requirement already satisfied: prometheus-client in a:\\apps\\python\\lib\\site-packages (from notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets) (0.11.0)\n",
-      "Requirement already satisfied: nbconvert in a:\\apps\\python\\lib\\site-packages (from notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets) (6.0.7)\n",
       "Requirement already satisfied: python-dateutil>=2.1 in a:\\apps\\python\\lib\\site-packages (from jupyter-client->ipykernel>=4.5.1->ipywidgets) (2.8.1)\n",
       "Requirement already satisfied: pywin32>=1.0 in a:\\apps\\python\\lib\\site-packages (from jupyter-core->nbformat>=4.2.0->ipywidgets) (301)\n",
       "Requirement already satisfied: pywinpty>=1.1.0 in a:\\apps\\python\\lib\\site-packages (from terminado>=0.8.3->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets) (1.1.1)\n",
       "Requirement already satisfied: cffi>=1.0.0 in a:\\apps\\python\\lib\\site-packages (from argon2-cffi->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets) (1.14.5)\n",
       "Requirement already satisfied: pycparser in a:\\apps\\python\\lib\\site-packages (from cffi>=1.0.0->argon2-cffi->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets) (2.20)\n",
       "Requirement already satisfied: MarkupSafe>=2.0 in a:\\apps\\python\\lib\\site-packages (from jinja2->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets) (2.0.1)\n",
-      "Requirement already satisfied: nbclient<0.6.0,>=0.5.0 in a:\\apps\\python\\lib\\site-packages (from nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets) (0.5.3)\n",
+      "Requirement already satisfied: entrypoints>=0.2.2 in a:\\apps\\python\\lib\\site-packages (from nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets) (0.3)\n",
       "Requirement already satisfied: mistune<2,>=0.8.1 in a:\\apps\\python\\lib\\site-packages (from nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets) (0.8.4)\n",
       "Requirement already satisfied: bleach in a:\\apps\\python\\lib\\site-packages (from nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets) (3.3.0)\n",
-      "Requirement already satisfied: entrypoints>=0.2.2 in a:\\apps\\python\\lib\\site-packages (from nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets) (0.3)\n",
       "Requirement already satisfied: defusedxml in a:\\apps\\python\\lib\\site-packages (from nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets) (0.7.1)\n",
-      "Requirement already satisfied: testpath in a:\\apps\\python\\lib\\site-packages (from nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets) (0.5.0)\n",
-      "Requirement already satisfied: pandocfilters>=1.4.1 in a:\\apps\\python\\lib\\site-packages (from nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets) (1.4.3)\n",
+      "Requirement already satisfied: nbclient<0.6.0,>=0.5.0 in a:\\apps\\python\\lib\\site-packages (from nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets) (0.5.3)\n",
       "Requirement already satisfied: jupyterlab-pygments in a:\\apps\\python\\lib\\site-packages (from nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets) (0.1.2)\n",
+      "Requirement already satisfied: pandocfilters>=1.4.1 in a:\\apps\\python\\lib\\site-packages (from nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets) (1.4.3)\n",
+      "Requirement already satisfied: testpath in a:\\apps\\python\\lib\\site-packages (from nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets) (0.5.0)\n",
       "Requirement already satisfied: async-generator in a:\\apps\\python\\lib\\site-packages (from nbclient<0.6.0,>=0.5.0->nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets) (1.10)\n",
       "Requirement already satisfied: nest-asyncio in a:\\apps\\python\\lib\\site-packages (from nbclient<0.6.0,>=0.5.0->nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets) (1.5.1)\n",
-      "Requirement already satisfied: webencodings in a:\\apps\\python\\lib\\site-packages (from bleach->nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets) (0.5.1)\n",
       "Requirement already satisfied: packaging in a:\\apps\\python\\lib\\site-packages (from bleach->nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets) (20.9)\n",
+      "Requirement already satisfied: webencodings in a:\\apps\\python\\lib\\site-packages (from bleach->nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets) (0.5.1)\n",
       "Requirement already satisfied: pyparsing>=2.0.2 in a:\\apps\\python\\lib\\site-packages (from packaging->bleach->nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets) (2.4.7)\n",
       "Requirement already satisfied: bs4 in a:\\apps\\python\\lib\\site-packages (0.0.1)\n",
       "Requirement already satisfied: beautifulsoup4 in a:\\apps\\python\\lib\\site-packages (from bs4) (4.9.3)\n",
       "Requirement already satisfied: soupsieve>1.2 in a:\\apps\\python\\lib\\site-packages (from beautifulsoup4->bs4) (2.2.1)\n",
       "Requirement already satisfied: lxml in a:\\apps\\python\\lib\\site-packages (4.6.3)\n",
-      "Collecting multiprocess\n",
-      "  Downloading multiprocess-0.70.11.1-py39-none-any.whl (126 kB)\n",
-      "Collecting dill>=0.3.3\n",
-      "  Using cached dill-0.3.3-py2.py3-none-any.whl (81 kB)\n",
-      "Installing collected packages: dill, multiprocess\n",
-      "Successfully installed dill-0.3.3 multiprocess-0.70.11.1\n"
+      "Requirement already satisfied: multiprocess in a:\\apps\\python\\lib\\site-packages (0.70.11.1)\n",
+      "Requirement already satisfied: dill>=0.3.3 in a:\\apps\\python\\lib\\site-packages (from multiprocess) (0.3.3)\n",
+      "Requirement already satisfied: cython in a:\\apps\\python\\lib\\site-packages (0.29.23)\n",
+      "Requirement already satisfied: numba in a:\\apps\\python\\lib\\site-packages (0.53.1)\n",
+      "Requirement already satisfied: numpy>=1.15 in a:\\apps\\python\\lib\\site-packages (from numba) (1.20.3)\n",
+      "Requirement already satisfied: setuptools in a:\\apps\\python\\lib\\site-packages (from numba) (56.0.0)\n",
+      "Requirement already satisfied: llvmlite<0.37,>=0.36.0rc1 in a:\\apps\\python\\lib\\site-packages (from numba) (0.36.0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR: Could not find a version that satisfies the requirement sqlite (from versions: none)\n",
+      "ERROR: No matching distribution found for sqlite\n"
      ]
     }
    ],
@@ -102,7 +111,8 @@
     "!{sys.executable} -m pip install bs4\n",
     "!{sys.executable} -m pip install lxml\n",
     "!{sys.executable} -m pip install multiprocess\n",
-    "!{sys.executable} -m pip install cython"
+    "!{sys.executable} -m pip install cython\n",
+    "!{sys.executable} -m pip install numba"
    ]
   },
   {
